--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,29 @@
 server.port=8080
-
+# ===============================
+# DATABASE
+# ===============================
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/market?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Admin
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.show-sql=true
-
-spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# MVC
+# ===============================
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+
+
+
 
 logging.level.org.springframework=INFO
 logging.file=myapplication.log
